Aligning external link icon correctly on hover in the related links area

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -250,7 +250,7 @@ h4 {
     }
     
     a[rel="external"]:hover:after {
-      background-position: 5px -385px;
+      background-position: 5px -388px;
     }
 
   }
